fix(ci): restore real suite build and license checks